# note-secretary

./: .gitignore  LICENSE  README.md  biome.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.debug.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  error.rs  lib.rs  main.rs
src-tauri/src/command/: handle_chats.rs  handle_env.rs  handle_notes.rs  handle_personas.rs  mod.rs
src-tauri/src/database/: mod.rs  note_entity.rs  persona_entity.rs  setup.rs
src-tauri/src/emitter/: mod.rs  toaster.rs
src-tauri/src/files/: chat_files.rs  chat_messages.rs  mod.rs
src-tauri/src/uri_scheme/: image.rs  mod.rs  streamdown.rs
src/app/: layout.tsx  nav-scope.tsx  page.tsx  react-scan.tsx  sidebar-nav.tsx
src/app/(main)/: layout-sidebar.tsx  layout.tsx  nav-documents.tsx  nav-scope.tsx  nav-search.tsx  nav-user.tsx
src/app/chat/: chat-context.tsx  chat-header.tsx  chat-input.tsx  chat-message.tsx  chat-persona.tsx  chat-usage.tsx  note-selector.tsx  page.tsx
src/app/note/: note-content.tsx  note-loading.tsx  note-title.tsx  note-toolbar.tsx  page.tsx
src/app/note-add/: page.tsx
src/components/: app-sidebar.tsx  nav-secondary.tsx  nav-user.tsx
src/components/ai-elements/: artifact.tsx  chain-of-thought.tsx  checkpoint.tsx  code-block.tsx  confirmation.tsx  context.tsx  conversation.tsx  image.tsx  inline-citation.tsx  loader.tsx  message.tsx  model-selector.tsx  plan.tsx  prompt-input.tsx  queue.tsx  reasoning.tsx  shimmer.tsx  sources.tsx  suggestion.tsx  task.tsx  tool.tsx  web-preview.tsx
src/components/animation/: animate-div.tsx  delete-confirm.tsx  main-header.tsx
src/components/form-fields/: note-fields.tsx
src/components/markdown/: display.tsx  editor.tsx  split.tsx
src/components/milkdown/: markdown-editor.tsx
src/components/ui/: alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button-group.tsx  button.tsx  card.tsx  carousel.tsx  checkbox.tsx  collapsible.tsx  command.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  empty.tsx  field.tsx  hover-card.tsx  input-group.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  (+8 more)
src/hooks/: use-chat-id.ts  use-chat.ts  use-mobile.ts  use-nav.ts  use-navigation.ts  use-note.ts  use-persona.ts  use-prompt.ts  use-router.ts  use-toaster.ts
src/lib/: agent.ts  message.ts  persona.ts  utils.ts
src/styles/: globals.css
(+10 files in other folders)
