[package]
name = "note_secretary"
version = "0.1.0"
description = "AI-driven secretary for markdown notes"
authors = ["vuhe"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# 为了确保库（lib）名称的唯一性 `_lib` 是必要后缀
# 可以避免与二进制程序（bin）名称冲突
# 此问题似乎仅出现在 Windows 平台上，详见：https://github.com/rust-lang/cargo/issues/8519
name = "note_secretary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
thiserror = "2"

[target."cfg(target_os = \"macos\")".dependencies]
block2 = "0.6.1"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"

[features]
# Tauri 默认以生产模式（production mode）运行；
# 当执行 `tauri dev` 时，如果 `devPath` 是一个 URL
# 则会通过 `cargo run --no-default-features` 命令来启动
default = ["custom-protocol"]
# 此 feature 主要用于生产构建（production builds），即 `devPath` 指向本地文件系统的情况
# 请勿删除此行（DO NOT remove this）
custom-protocol = ["tauri/custom-protocol"]
